<resources>
    <string name="app_name">Hitung Kurs</string>
    <string name="kursintro">Hitung Kurs merupakan aplikasi kalkulator nilai mata uang asing Dollar Amerika (USD) ke Mata uang Indonesia Rupiah (IDR).</string>
    <string name="nilaiidr">Nilai Uang Dollar USD</string>
    <string name="hitung">Hitung</string>
    <string name="hargakurs">Kurs Dollar saat ini 14.300 Rupiah</string>
    <string name="nilaikurs_invalid">Nilai kurs kosong!</string>
    <string name="infokurs">Info Kurs USD Dollar saat ini adalah 14.300</string>
    <string name="lihat_info">Lihat Info Kurs</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="deskripsi">Hitung Kurs merupakan aplikasi kalkulator nilai mata uang asing Dollar Amerika (USD) ke Mata uang Indonesia Rupiah (IDR).\n\nCopyright © 2022 <b>Iqbal Apipah Noer</b>.\nAll rights reserved.</string>
    <string name="share">Share</string>
    <string name="bagikan_template">Jumlah Kurs: %1$s</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data kurs</string>
    <string name="notif_title">Info Update kurs!</string>
    <string name="notif_text">Cek kurs terkini...</string>
    <string name="koneksi_error">Koneksi error</string>
</resources>